# MouseDB

./: .gitignore  AGENTS.md  INSTALL.md  environment.yml  pyproject.toml  test_setup.py
mousedb/: AGENTS.md  __init__.py  backfill.py  cli.py  database.py  diagnostics.py  exporters.py  importers.py  lab_figures.py  migrations.py  phases.py  protocols.py  region_priors.py  schema.py  stats.py  validate_data_locations.py  validators.py  visualizations.py  watcher_bridge.py
mousedb/cfs_analysis/: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  install.bat  install.sh  pyproject.toml  run_analysis.bat  run_analysis.command
mousedb/cfs_analysis/cfs_analysis/: __init__.py  config.py  data_loader.py  doctor.py
mousedb/cfs_analysis/cfs_analysis/helpers/: clusters.py  hierarchical.py  models.py  plotting.py
mousedb/cfs_analysis/docs/: assumptions.md  customizing_figures.md  data_dictionary.md  reading_order.md
mousedb/cfs_analysis/docs/methods/: pca_explained.md  pls_explained.md  region_priors.md
mousedb/cfs_analysis/notebooks/: 00_setup.ipynb  01_connectivity_pca.ipynb  02_kinematic_pca.ipynb  03_kinematic_clustering.ipynb  04_pls_variants.ipynb  05_lmm_phase_effects.ipynb  06_pellet_validation.ipynb  07_connectivity_trajectory_linkage.ipynb  08_hypothesis_informed_tests.ipynb  99_figure_gallery.ipynb
mousedb/cfs_analysis/tests/: test_smoke.py
mousedb/cfs_analysis/tools/: build_notebooks.py  extract_notebook_cells.py  sync_region_priors.py
mousedb/cohort_tools/: update_sheets.py
mousedb/data/: allen_mouse_10um_lookup.json
mousedb/endpoint_ck_analysis/: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  install.bat  install.sh  pyproject.toml  run_analysis.bat  run_analysis.command
mousedb/endpoint_ck_analysis/docs/: assumptions.md  customizing_figures.md  data_dictionary.md  reading_order.md
mousedb/endpoint_ck_analysis/docs/methods/: lmm_explained.md  pca_explained.md  pls_explained.md  region_priors.md
mousedb/endpoint_ck_analysis/endpoint_ck_analysis/: __init__.py  config.py  data_loader.py  doctor.py
mousedb/endpoint_ck_analysis/endpoint_ck_analysis/helpers/: __init__.py  clusters.py  connectivity.py  dimreduce.py  filters.py  hierarchical.py  kinematics.py  models.py  plotting.py  synthetic.py
mousedb/endpoint_ck_analysis/notebooks/: 00_setup.ipynb  01_connectivity_pca.ipynb  02_kinematic_pca.ipynb  03_kinematic_clustering.ipynb  04_pls_variants.ipynb  05_lmm_phase_effects.ipynb  06_pellet_validation.ipynb  07_connectivity_trajectory_linkage.ipynb  08_hypothesis_informed_tests.ipynb  99_figure_gallery.ipynb
mousedb/endpoint_ck_analysis/tests/: test_smoke.py
mousedb/endpoint_ck_analysis/tools/: add_interpretation_sections.py  build_notebooks.py  sync_region_priors.py
mousedb/exporters/: __init__.py  build_class_dataset.py  export_now.py  quick_export.py
mousedb/figures/: FIGURE_REVIEW_LESSONS.md  __init__.py  annotations.py  audit.py  axes.py  export.py  kinematic_filters.py  legends.py  palettes.py  protocol.py  standards.py  stats.py  validation.py
mousedb/gui/: __init__.py  app.py  archive_status_tab.py  patch_tooltips.py  styles.py  timeline_gantt.py  video_pipeline_tab.py
mousedb/recipes/: __init__.py  base.py  behavior.py  kinematic_recovery.py  kinematic_stratified.py  kinematics.py  lab_overview.py  recovery.py  tissue.py
mousedb/registry/: __init__.py  accession.py  figure_registry.py  models.py  version_capture.py
mousedb/utils/: __init__.py  directory_dump.py  reorganize.py  stats_organizer.py
mousedb/web/: __init__.py  config.py  dependencies.py  main.py  trajectory.py
mousedb/web/routers/: dashboard.py  plots.py
mousedb/web/static/css/: main.css
mousedb/web/templates/: base.html  dashboard.html  index.html  spaghetti.html
mousedb/web/templates/components/: summary_cards.html
tests/: test_phases.py  test_region_priors.py
unified_data/: __init__.py  cli.py  database.py  diagnostics.py  exporters.py
unified_data/cohort_tools/: __init__.py  make_sheets.py
unified_data/exporters/: export_now.py
unified_data/gui/: protocol_builder.py
unified_data/utils/: reorganize.py
