[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mousedb"
version = "0.1.0"
description = "Database and data management tools for Connectomics Grant research"
readme = "README.md"
authors = [
    {name = "Logan Friedrich", email = "logan@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0",
    "pandas>=1.5",
    "openpyxl>=3.0",
    "pyarrow>=10.0",
    "matplotlib>=3.5",
    "scipy>=1.9",
    "PyQt5>=5.15",
    "qtpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.scripts]
mousedb = "mousedb.cli:main"
mousedb-status = "mousedb.cli:mousedb_status"
mousedb-init = "mousedb.cli:mousedb_init"
mousedb-new-cohort = "mousedb.cli:mousedb_new_cohort"
mousedb-import = "mousedb.cli:mousedb_import"
mousedb-export = "mousedb.cli:mousedb_export"
mousedb-entry = "mousedb.cli:mousedb_entry"
mousedb-browse = "mousedb.cli:mousedb_browse"
mousedb-check = "mousedb.cli:mousedb_check"
mousedb-make-sheets = "mousedb.cohort_tools.make_sheets:main"
mousedb-update-sheets = "mousedb.cohort_tools.update_sheets:main"
mousedb-reorganize = "mousedb.utils.reorganize:main"
mousedb-quick-export = "mousedb.exporters.quick_export:main"
mousedb-video-status = "mousedb.cli:mousedb_video_status"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
